# haskell-game-pac-man-

./: PacMan.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Controller.hs  Main.hs  Model.hs  Movement.hs  View.hs
src/levels/: maze1.txt  maze2.txt
