name:                Pacman
version:             0.0.0.1
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable PacMan
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       containers,
                       array,
                       random
  hs-source-dirs:      src
  other-modules:       Controller
                     , Model
                     , View
                     , Movement
  default-language:    Haskell2010